--- a/core/ui/src/main/res/values/colors.xml
+++ b/core/ui/src/main/res/values/colors.xml
@@ -22,6 +22,7 @@
     <color name="royal_blue_100">#3A55EA</color>
     <color name="royal_blue_70">#B33A55EA</color>
     <color name="fern_frond_100">#487B1E</color>
+    <color name="fern_frond_70">#B3487B1E</color>
 
 
     <!--    <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">@color/ratatouille_on_primary</color>-->
