--- a/core/ui/src/main/res/values/styles.xml
+++ b/core/ui/src/main/res/values/styles.xml
@@ -101,8 +101,17 @@
 
     <!--Chip styles-->
     <style name="CustomFilterChipStyle" parent="Widget.MaterialComponents.Chip.Filter">
-        <item name="chipBackgroundColor">@color/background_color_chip_state_list</item>
+        <item name="chipBackgroundColor">@color/background_blue_color_chip_state_list</item>
         <item name="chipStrokeColor">@color/royal_blue_100</item>
+        <item name="chipStrokeWidth">2dp</item>
+        <item name="chipIconTint">?attr/colorOnSecondary</item>
+        <item name="chipCornerRadius">@dimen/base_corner_radius</item>
+        <item name="android:textColor">@color/white_new</item>
+    </style>
+
+    <style name="SingleFilterChipStyle" parent="Widget.MaterialComponents.Chip.Filter">
+        <item name="chipBackgroundColor">@color/background_green_color_chip_state_list</item>
+        <item name="chipStrokeColor">@color/fern_frond_100</item>
         <item name="chipStrokeWidth">2dp</item>
         <item name="chipIconTint">?attr/colorOnSecondary</item>
         <item name="chipCornerRadius">@dimen/base_corner_radius</item>
