--- a/core/ui/src/main/res/values/styles.xml
+++ b/core/ui/src/main/res/values/styles.xml
@@ -104,6 +104,7 @@
         <item name="chipBackgroundColor">@color/background_blue_color_chip_state_list</item>
         <item name="chipStrokeColor">@color/royal_blue_100</item>
         <item name="chipStrokeWidth">2dp</item>
+        <item name="chipIcon">@drawable/ic_check</item>
         <item name="chipIconTint">?attr/colorOnSecondary</item>
         <item name="chipCornerRadius">@dimen/base_corner_radius</item>
         <item name="android:textColor">@color/white_new</item>
@@ -113,6 +114,7 @@
         <item name="chipBackgroundColor">@color/background_green_color_chip_state_list</item>
         <item name="chipStrokeColor">@color/fern_frond_100</item>
         <item name="chipStrokeWidth">2dp</item>
+        <item name="chipIcon">@drawable/ic_check</item>
         <item name="chipIconTint">?attr/colorOnSecondary</item>
         <item name="chipCornerRadius">@dimen/base_corner_radius</item>
         <item name="android:textColor">@color/white_new</item>
