--- a/app/src/main/res/drawable/bottom_bar_semi_transparent.xml
+++ b/app/src/main/res/drawable/bottom_bar_semi_transparent.xml
@@ -3,6 +3,6 @@
     <gradient
         android:angle="90"
         android:endColor="@android:color/transparent"
-        android:centerColor="@color/lynch_90"
+        android:centerColor="?attr/colorSecondaryVariant"
         android:startColor="?attr/colorSecondary" />
 </shape>
