Update ui when user set movie as favorite

--- a/feature/movie_details/src/main/res/layout/fragment_media_details_container.xml
+++ b/feature/movie_details/src/main/res/layout/fragment_media_details_container.xml
@@ -197,6 +197,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|end"
                 android:layout_margin="@dimen/base_margin"
+                app:isFavorite="@{media.favorite}"
                 android:backgroundTint="?attr/colorAccent"
                 android:contentDescription="Set as favorite"
                 android:src="@drawable/ic_favorite_border" />
