--- a/feature/movie_details/src/main/res/layout/fragment_media_details_container.xml
+++ b/feature/movie_details/src/main/res/layout/fragment_media_details_container.xml
@@ -203,8 +203,7 @@
                 android:layout_margin="@dimen/base_margin"
                 android:backgroundTint="?attr/colorAccent"
                 android:contentDescription="Set as favorite"
-                android:src="@drawable/ic_favorite_border"
-                app:isFavorite="@{media.favorite}" />
+                android:src="@drawable/round_add_24" />
 
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
     </FrameLayout>
