--- a/core/navigation/src/main/res/values/nav_ids.xml
+++ b/core/navigation/src/main/res/values/nav_ids.xml
@@ -4,4 +4,6 @@
     <item name="movie_details_graph" type="id" />
     <item name="search_graph" type="id" />
     <item name="discover_graph" type="id" />
+    <item name="person_details_graph" type="id" />
+    <item name="saved_graph" type="id" />
 </resources>
