--- a/core/navigation/src/main/res/navigation/main_navigation.xml
+++ b/core/navigation/src/main/res/navigation/main_navigation.xml
@@ -9,6 +9,7 @@
     <include app:graph="@navigation/search_graph" />
     <include app:graph="@navigation/discover_graph" />
     <include app:graph="@navigation/person_details_graph" />
+    <include app:graph="@navigation/saved_graph" />
 
     <action
         android:id="@+id/action_global_home_flow"
@@ -16,10 +17,16 @@
         app:popUpTo="@id/nav_graph" />
 
     <action
+        android:id="@+id/action_global_saved_flow"
+        app:destination="@id/saved_graph"
+        app:popUpTo="@id/nav_graph" />
+
+    <action
         android:id="@+id/action_global_search_flow"
         app:destination="@id/search_graph"
         app:enterAnim="@anim/slide_in_from_right"
         app:exitAnim="@anim/slide_out_to_right" />
+
     <action
         android:id="@+id/action_global_discover_flow"
         app:destination="@id/discover_graph"
