--- a/core/ui/src/main/res/values/styles.xml
+++ b/core/ui/src/main/res/values/styles.xml
@@ -20,6 +20,26 @@
         <item name="android:textAllCaps">false</item>
         <item name="android:textStyle">bold</item>
     </style>
+
+
+    <style name="Tab_Layout_Huge" parent="Widget.MaterialComponents.TabLayout">
+        <item name="tabIndicator">@android:color/transparent</item>
+        <item name="tabIndicatorColor">@android:color/transparent</item>
+        <item name="tabSelectedTextColor">?colorAccent</item>
+        <item name="tabMode">auto</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="tabTextAppearance">@style/CustomTextTabHugeAppearance</item>
+        <item name="tabIndicatorFullWidth">false</item>
+        <item name="tabGravity">start</item>
+        <item name="tabTextColor">?colorOnSecondary</item>
+    </style>
+
+    <style name="CustomTextTabHugeAppearance" parent="TextAppearance.Design.Tab">
+        <item name="textAllCaps">false</item>
+        <item name="android:textSize">@dimen/huge_text_size</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textStyle">bold</item>
+    </style>
     <!--  End TabLayout Style-->
 
     <!--    Text style-->
