Aggiunti i moduli data e model per le liste

--- a/feature/movie_details/src/main/res/layout/bottom_dialog_manage_media.xml
+++ b/feature/movie_details/src/main/res/layout/bottom_dialog_manage_media.xml
@@ -102,7 +102,11 @@
             style="@style/PrimaryCustomMaterialButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/create_list_btn"
             android:layout_marginHorizontal="@dimen/base_margin"
+            android:background="@drawable/border_background"
+            app:icon="@drawable/round_add_24"
+            app:iconTint="?attr/colorOnPrimary"
             android:text="Create list"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
