--- a/core/navigation/src/main/res/navigation/main_navigation.xml
+++ b/core/navigation/src/main/res/navigation/main_navigation.xml
@@ -17,6 +17,10 @@
         app:popUpTo="@id/nav_graph" />
 
     <action
+        android:id="@+id/action_global_list_creation_flow"
+        app:destination="@id/list_creation_graph" />
+
+    <action
         android:id="@+id/action_global_saved_flow"
         app:destination="@id/saved_graph"
         app:popUpTo="@id/nav_graph" />
@@ -57,4 +61,5 @@
             android:name="id"
             app:argType="integer" />
     </action>
+    <include app:graph="@navigation/list_creation_graph" />
 </navigation>
