--- a/core/navigation/src/main/res/values/nav_ids.xml
+++ b/core/navigation/src/main/res/values/nav_ids.xml
@@ -6,4 +6,5 @@
     <item name="discover_graph" type="id" />
     <item name="person_details_graph" type="id" />
     <item name="saved_graph" type="id" />
+    <item name="list_creation_graph" type="id" />
 </resources>
