Generalizzato il blocco android con un plugin Gradle

--- a/core/ui/src/main/res/layout/list_item_media_list.xml
+++ b/core/ui/src/main/res/layout/list_item_media_list.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="list"
-            type="com.indisparte.list.MediaList" />
+            type="com.indisparte.media_list.MediaList" />
     </data>
 
     <com.google.android.material.card.MaterialCardView
