Update documentation and inheritance

--- a/feature/movie_details/src/main/res/layout/layout_movie_info.xml
+++ b/feature/movie_details/src/main/res/layout/layout_movie_info.xml
@@ -134,7 +134,7 @@
             app:title="Companies"
             app:titleTextColor="?attr/colorOnSecondary"
             app:textTitleStyle="normal"
-            app:value="@{movie.productCompaniesConcatenatedString}"
+            app:value="@{movie.productionCompaniesName}"
             app:valueTextColor="@color/white_new" />
 
         <com.indisparte.ui.custom_view.LinearLayoutInfoView
