--- a/core/ui/src/main/res/layout/list_item_person_small.xml
+++ b/core/ui/src/main/res/layout/list_item_person_small.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="person"
-            type="com.indisparte.base.PersonBase" />
+            type="com.indisparte.base.Person" />
     </data>
 
 
